--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <link rel = "icon" href = "icon.png">
 <title>Victoria |Home</title>
-	<link rel = "stylesheet" href = "layout.css">
+	<link type = "text/css" rel = "stylesheet" href = "Layout.css">
 	
 </head>
 <body id = "top" text = "#fff" >
