--- a/Games/index.html
+++ b/Games/index.html
@@ -2,34 +2,33 @@
 <head>
 
 <title>Victoria |Games</title>
-	<link rel = "stylesheet" href = "layout.css">
+<link type="text/css" rel="stylesheet" href="../Layout.css">
 </head>
-<body text = "#fff">
+<body text="#fff">
 
-<div class = "site-header">
-<h1>Welcome To My Website</h1>
-</div>
+	<div class="site-header">
+		<h1>Welcome To My Website</h1>
+	</div>
 
-<ul class = "topnav" id = "myTopnav">
-	<li><a href = "home.html" target = "_blank">Home</a></li>
-	<li><a href = "about.html" target = "_blank">About</a></li>
-	<li><a href = "games.html" target = "_blank">Games</a></li>
-	<li><a href = "contact.html" target = "_blank">Contact</a></li>
-	<li><a href = "portfolio.html" target = "_blank">Portfolio</a></li>
-	<li class = "icon">
-		<a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
-	</li>
-</ul>
+	<ul class="topnav" id="myTopnav">
+		<li><a href="../index.html" target="_blank">Home</a></li>
+		<li><a href="../About/index.html" target="_blank">About</a></li>
+		<li><a href="index.html" target="_blank">Games</a></li>
+		<li><a href="../Contact/index.html" target="_blank">Contact</a></li>
+		<li><a href="../Portfolio/index.html" target="_blank">Portfolio</a></li>
+		<li class="icon"><a href="javascript:void(0);"
+			onclick="myFunction()">&#9776;</a></li>
+	</ul>
 
-<div class = "billboard">
-	<h2>Games</h2>
-</div>
+	<div class="billboard">
+		<h2>Games</h2>
+	</div>
 
-<div class = "paragraph">
-<p>Here are a few games that I have created using JavaScript
-and Java. Please pick one to play:</p>
-</div>
+	<div class="paragraph">
+		<p>Here are a few games that I have created using JavaScript and
+			Java. Please pick one to play:</p>
+	</div>
 
-<a href = "triviaGame2.0.html" target = "_blank"> Trivia </a>
+	<a href="triviaGame2.0.html" target="_blank"> Trivia </a>
 </body>
 </html>
