--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <html>
 <head>
-<link rel = "icon" href = "icon.png">
+<link rel="icon" href="icon.png">
 <title>Victoria |Home</title>
-	<link type = "text/css" rel = "stylesheet" href = "Layout.css">
-	
-</head>
-<body id = "top" text = "#fff" >
+<link type="text/css" rel="stylesheet" href="Layout.css">
 
-<div class = "site-header">
-<h1>Welcome To My Website</h1>
-</div>
-<ul class = "topnav" id = "myTopnav">
-	<li><a href = "home.html" target = "">Home</a></li>
-	<li><a href = "about.html" target = "">About</a></li>
-	<li><a href = "games.html" target = "">Games</a></li>
-	<li><a href = "contact.html" target = "">Contact</a></li>
-	<li><a href = "portfolio.html" target = "">Portfolio</a></li>
-	<li class = "icon">
-		<a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
-	</li>
-</ul>	
+</head>
+<body id="top" text="#fff">
+
+	<div class="site-header">
+		<h1>Welcome To My Website</h1>
+	</div>
+	<ul class="topnav" id="myTopnav">
+		<li><a href="index.html" target="">Home</a></li>
+		<li><a href="About/index.html" target="">About</a></li>
+		<li><a href="Games/index.html" target="">Games</a></li>
+		<li><a href="Contact/index.html" target="">Contact</a></li>
+		<li><a href="Portfolio/index.html" target="">Portfolio</a></li>
+		<li class="icon"><a href="javascript:void(0);"
+			onclick="myFunction()">&#9776;</a></li>
+	</ul>
 	<script type="text/javascript">
 	function myFunction() {
     var x = document.getElementById("myTopnav");
@@ -35,16 +34,15 @@
 	echo x++;
 }
 	</script>
-<div class = "billboard">
-	<h2>Home</h2>
-</div>	
+	<div class="billboard">
+		<h2>Home</h2>
+	</div>
 	<?php
     include ("counter.php")
     ?>
-	
-	<p onmouseover = "displayCount()" &#9776>
-	</p>
-	
-<a href = "#top" color = "green" >Back to Top</a>	
+
+	<p onmouseover="displayCount()" &#9776></p>
+
+	<a href="#top" color="green">Back to Top</a>
 </body>
 </html>
