--- a/About/index.html
+++ b/About/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Victoria |About</title>
-<link type="text/css" rel="stylesheet" href="../layout.css">
+<link type="text/css" rel="stylesheet" href="../Layout.css">
 </head>
 <body text="#fff">
 
