--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Victoria |Portfolio</title>
-<link type="text/css" rel="stylesheet" href="../layout.css">
+<link type="text/css" rel="stylesheet" href="../Layout.css">
 </head>
 <body text="#fff">
 
