Added a tutorial video to the games page, buttons,
and changes to the CSS layout.

--- a/Games/index.html
+++ b/Games/index.html
@@ -29,6 +29,13 @@
 			Java. Please pick one to play:</p>
 	</div>
 
-	<a href="triviaGame2.0.html" target="_blank"> Trivia </a>
+<video width="320" height="240" controls>
+  <source src="triviaTutorial.mp4" type="video/mp4">
+</video>
+<br />
+<button><a href="triviaGame2.0.html" target="_blank" style = "color: #7d497b; font-size: 25px;"> Trivia </a></button>
+<br />
+	<button><a href="blockGame.html" target="_blank" style = "color: #7d497b; font-size: 25px;"> Block Game </a></button>
+	
 </body>
 </html>
