--- a/index.html
+++ b/index.html
@@ -41,8 +41,49 @@
     include ("counter.php")
     ?>
 
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
 	<p onmouseover="displayCount()" &#9776></p>
 
 	<a href="#top" color="green">Back to Top</a>
+<br />
+<br />
+<br />
+	<div class = "footer"><p>THIS IS THE FOOTER</p></div>
 </body>
 </html>
