--- a/Games/blockGame.html
+++ b/Games/blockGame.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <style>
 canvas {
-    border:1px solid #d3d3d3;
+    border: 2 px solid black;
     background-color: #f1f1f1;
 }
 </style>
@@ -106,8 +106,23 @@ function updateGameArea() {
         minGap = 50;
         maxGap = 200;
         gap = Math.floor(Math.random()*(maxGap-minGap+1)+minGap);
+       
+        if(myGameArea.frameNo > 600 && myGameArea.frameNo < 1201){
+            myObstacles.push(new component(10, height, "red", x, 0));
+            myObstacles.push(new component(10, x - height - gap, "red", x, height + gap));
+        }
+        else if(myGameArea.frameNo > 1200 && myGameArea.frameNo < 2400){
+            myObstacles.push(new component(10, height, "yellow", x, 0));
+            myObstacles.push(new component(10, x - height - gap, "yellow", x, height + gap));	
+        }
+        else if(myGameArea.frameNo > 3600 && myGameArea.frameNo < 4800){
+            myObstacles.push(new component(10, height, "yellow", x, 0));
+            myObstacles.push(new component(10, x - height - gap, "yellow", x, height + gap));	
+        }
+        else {
         myObstacles.push(new component(10, height, "green", x, 0));
         myObstacles.push(new component(10, x - height - gap, "green", x, height + gap));
+        }
     }
     for (i = 0; i < myObstacles.length; i += 1) {
         myObstacles[i].x += -1;
@@ -129,8 +144,8 @@ function accelerate(n) {
 }
 </script>
 <br>
-<button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.05)">ACCELERATE</button>
-<p>Use the ACCELERATE button to stay in the air</p>
-<p>How long can you stay alive?</p>
+<button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.05)">FLY</button>
+<p>Use the FLY button avoid the obstacles</p>
+<p>How long can you survive?</p>
 </body>
 </html>
