--- a/Games/blockGame.html
+++ b/Games/blockGame.html
@@ -6,9 +6,21 @@ canvas {
     border: 2px solid black;
     background-color: #f1f1f1;
 }
+p{
+font-family: "Lucida Console" , Monaco, monospace;
+color: white;
+}
+button{
+  color: #7d497b;
+  background: rgba(255,255,255,255);
+  border: solid 3px #7d497b;
+  height: 100px; 
+  width: 250px;
+  float: 
+}
 </style>
 </head>
-<body onload="startGame()">
+<body style ="background-color: #2F4F4F;" onload="startGame()" >
 <script>
 
 var myGamePiece;
@@ -147,5 +159,6 @@ function accelerate(n) {
 <button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.05)">FLY</button>
 <p>Use the FLY button avoid the obstacles</p>
 <p>How long can you survive?</p>
+<button onmousedown = "location.reload()">RESTART</button>
 </body>
 </html>
