Added blockTutorial video

--- a/Games/index.html
+++ b/Games/index.html
@@ -35,6 +35,9 @@
 <br />
 <button><a href="triviaGame2.0.html" target="_blank" style = "color: #7d497b; font-size: 25px;"> Trivia </a></button>
 <br />
+<video width="320" height="240" controls>
+  <source src="blockTutorial.mp4" type="video/mp4">
+</video>
 	<button><a href="blockGame.html" target="_blank" style = "color: #7d497b; font-size: 25px;"> Block Game </a></button>
 	
 </body>
