--- a/Games/index.html
+++ b/Games/index.html
@@ -11,11 +11,11 @@
 	</div>
 
 	<ul class="topnav" id="myTopnav">
-		<li><a href="../index.html" target="_blank">Home</a></li>
-		<li><a href="../About/index.html" target="_blank">About</a></li>
-		<li><a href="index.html" target="_blank">Games</a></li>
-		<li><a href="../Contact/index.html" target="_blank">Contact</a></li>
-		<li><a href="../Portfolio/index.html" target="_blank">Portfolio</a></li>
+		<li><a href="../index.html" target="">Home</a></li>
+		<li><a href="../About/index.html" target="">About</a></li>
+		<li><a href="index.html" target="">Games</a></li>
+		<li><a href="../Contact/index.html" target="">Contact</a></li>
+		<li><a href="../Portfolio/index.html" target="">Portfolio</a></li>
 		<li class="icon"><a href="javascript:void(0);"
 			onclick="myFunction()">&#9776;</a></li>
 	</ul>
@@ -26,7 +26,7 @@
 
 	<div class="paragraph">
 		<p>Here are a few games that I have created using JavaScript and
-			Java. Please pick one to play:</p>
+			Java. Please pick one to play: </p>
 	</div>
 
 <video width="320" height="240" controls>
