Capitalized file names for pictures

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 			<ul class = "picture"><img src = "Images\ComputerScienceCloud.png" height = "300   px"alt = "1"></ul>
 			<ul class = "picture"><img src = "icon.png" height = "300 px"></ulalt = "2"></ul>
 			<ul class = "picture"><img src = "Images\2016-09-18 (2).png" height = "300 px"alt = "3"></ul>
-			<ul class = "picture"><img src = "Images\blockGame.png" height = "300 px"alt = "4"></ul>
-			<ul class = "picture"><img src = "Images\blockTutorialPicture.png" height = "300 px" alt = "5"></ul>
-			<ul class = "picture"><img src = "Images\eclipseCapture.png" height = "300 px"alt = "6"></ul>
+			<ul class = "picture"><img src = "Images\blockGame.PNG" height = "300 px"alt = "4"></ul>
+			<ul class = "picture"><img src = "Images\blockTutorialPicture.PNG" height = "300 px" alt = "5"></ul>
+			<ul class = "picture"><img src = "Images\eclipseCapture.PNG" height = "300 px"alt = "6"></ul>
 			<ul class = "picture"><img src = "Images\Octocat.jpg" height = "300 px"alt = "7"></ul>
 			<ul class = "picture"><img src = "Images\triviaGame.png" height = "300 px"alt = "8"></ul>
            	<ul class = "picture"><img height="300 px" src="Images\triviaTutorialPicture.png" alt = "9"></ul>
