--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <br /><br />			
 			<li id = "pictures" ><!--width = "70%" > -->
 			<ul class = "picture"><img src = "Images\ComputerScienceCloud.png" height = "300   px"alt = "1"></ul>
-			<ul class = "picture"><img src = "icon.png" height = "300 px"></ulalt = "2"></ul>
+			<ul class = "picture"><img src = "icon.png" height = "300 px"></ul alt = "2"></ul>
 			<ul class = "picture"><img src = "Images\2016-09-18 (2).png" height = "300 px"alt = "3"></ul>
 			<ul class = "picture"><img src = "Images\blockGame.PNG" height = "300 px"alt = "4"></ul>
 			<ul class = "picture"><img src = "Images\blockTutorialPicture.PNG" height = "300 px" alt = "5"></ul>
@@ -64,6 +64,7 @@
 			<ul class = "picture"><img src = "Images\Octocat.jpg" height = "300 px"alt = "7"></ul>
 			<ul class = "picture"><img src = "Images\triviaGame.png" height = "300 px"alt = "8"></ul>
            	<ul class = "picture"><img height="300 px" src="Images\triviaTutorialPicture.png" alt = "9"></ul>
+           	<ul class = "picture"><img height="300 px" src="Images\2016-09-18 (1).png" alt = "10"></ul>           	
 		   </li>
 		</div>
 	
