Added the title tab icon to each page

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 <title>Victoria |Contact</title>
+<link rel = "icon" href = ../icon.png>
+
 <link type="text/css" rel="stylesheet" href="../Layout.css">
 </head>
 <body text="#fff">
@@ -10,7 +12,7 @@
 	</div>
 
 	<!--CONTACT-->
-	<ul class="topnav" id="myTopnav">
+	<ul class="topnav" id="myTopnav" style = "background-image: url(..\Images\backgroundImage.jpg)" class = "topNavBackgroundVersion">
 		<li><a href="../index.html" target="">Home</a></li>
 		<li><a href="../About/index.html" target="">About</a></li>
 		<li><a href="../Games/index.html" target="">Games</a></li>
@@ -28,7 +30,7 @@
 		<p>Hello. If you would like to contact me, please fill out this
 			form. Thank you for visiting my website.</p>
 	</div>
-
+ 
 	<!--<div><br /><a href = "mailto:email@gmail.com" class = "contactLink">myEmail@yahoo.com</a></div>-->
 
 
