--- a/Games/index.html
+++ b/Games/index.html
@@ -2,6 +2,8 @@
 <head>
 
 <title>Victoria |Games</title>
+<link rel = "icon" href = ../icon.png>
+
 <link type="text/css" rel="stylesheet" href="../Layout.css">
 </head>
 <body text="#fff">
@@ -10,7 +12,7 @@
 		<h1>Welcome To My Website</h1>
 	</div>
 
-	<ul class="topnav" id="myTopnav">
+	<ul class="topnav" id="myTopnav" >
 		<li><a href="../index.html" target="">Home</a></li>
 		<li><a href="../About/index.html" target="">About</a></li>
 		<li><a href="index.html" target="">Games</a></li>
