--- a/About/index.html
+++ b/About/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>Victoria |About</title>
+<link rel = "icon" href = ../icon.png>
+
 <link type="text/css" rel="stylesheet" href="../Layout.css">
 </head>
 <body text="#fff">
