--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -2,6 +2,8 @@
 <head>
 <title>Victoria |Portfolio</title>
 <link type="text/css" rel="stylesheet" href="../Layout.css">
+<link rel = "icon" href = ../icon.png>
+
 </head>
 <body text="#fff">
 
