--- a/About/index.html
+++ b/About/index.html
@@ -23,32 +23,21 @@
 			onclick="myFunction()">&#9776;</a></li>
 	</ul>
 
-	<div class="billboard">
+	<div class="paragraph">
 		<h2>About</h2>
 	</div>
 
-	<div class="paragraph">
-		<p>Hello. Welcome to my website. My name is Victoria Thornton, and
-			I enjoy programming. I mainly program in Java and C++, and I am
-			learning webpage design both for my senior project, and for fun. I
-			plan to make a game site, and create a website for the GHSGCA
-			(Georgia High School Golf Coaches Association).</p>
+	<div class="card">
+		<p>Hello. My name is Victoria Thornton, and
+			programming is one of my favorite activities. So far, I have written code in Java, C++, C#, and JavaScript. I have developed some 3D games using the Unity game engine, and I am
+			also learning webpage design both for my senior project and for fun. For my project, I have created this website, and 
+			a website for the GHSGCA.
+			(ghsgca.org)</p>
 	</div>
 
-	<p>Please answer a few questions about yourself:</p>
-	<p>What is your favorite color?</p>
-	<form>
-		<input type="radio" name="favorite" value="1" /> Red <br /> <input
-			type="radio" name="favorite" value="2" /> Orange <br /> <input
-			type="radio" name="favorite" value="3" /> Yellow <br /> <input
-			type="radio" name="favorite" value="4" /> Green <br /> <input
-			type="radio" name="favorite" value="5" /> Blue <br /> <input
-			type="radio" name="favorite" value="6" /> Pink<br /> <input
-			type="radio" name="favorite" value="7" /> Purple <br />
-	</form>
-	<form>
-		<input type="submit" name="SUBMIT" />
-	</form>
-
-</body>
+	<div class="card">
+		<p>If you would like to contact me, please visit my <a href = "../Contact/index.html" style = "text-decoration: none; :hover{color: black}">contact page</a></p>
+	</div>
+	
+	</body>
 </html>
