--- a/Contact/index.html
+++ b/Contact/index.html
@@ -22,13 +22,40 @@
 			onclick="myFunction()">&#9776;</a></li>
 	</ul>
 
-	<div class="billboard">
+	<div class="paragraph">
 		<h2>Contact</h2>
 	</div>
 
-	<div class="paragraph">
+<!-- <div class="paragraph">
 		<p>Hello. If you would like to contact me, please fill out this
 			form. Thank you for visiting my website.</p>
+	</div> -->	
+	
+	<div class = "card">	<p style = "text-align: center">If you would like to contact me, please fill out this
+			form. Thank you for visiting my website.</p>
+	</div>
+ 
+ 
+ <div class="container padding" id="contact">
+		<form role="form" action="contact.php" method="post">
+			<div class="form-group">
+				<label for="email">Email:</label>
+				<input type="email" class="form-control" id="email" name="email" placeholder="example@example.com"/>
+			</div>
+			<div class="form-group">
+				<label for="name">Name:</label>
+				<input type="text" class="form-control" id="name" name="name" placeholder="Your name here"/>
+			
+			</div>
+			<div class="form-group">
+				<label for="message">Message:</label>
+				<textarea class="form-control" name="message" id="message" placeholder="Your message here"></textarea>
+			</div>
+			<div class="form-group">
+				<input type="checkbox" name="promo" value="yes"/> Send me promotional content
+			</div>
+			<button type="submit" class="btn btn-default">Submit</button>
+		</form>
 	</div>
  
 	<!--<div><br /><a href = "mailto:email@gmail.com" class = "contactLink">myEmail@yahoo.com</a></div>-->
