Contact Form Test

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -4,6 +4,7 @@
 <link rel = "icon" href = ../icon.png>
 
 <link type="text/css" rel="stylesheet" href="../Layout.css">
+<script type="text/javascript" src="https://form.jotform.us/jsform/72046392509155"></script>
 </head>
 <body text="#fff">
 
@@ -36,27 +37,7 @@
 	</div>
  
  
- <div class="container padding" id="contact">
-		<form role="form" action="contact.php" method="post">
-			<div class="form-group">
-				<label for="email">Email:</label>
-				<input type="email" class="form-control" id="email" name="email" placeholder="example@example.com"/>
-			</div>
-			<div class="form-group">
-				<label for="name">Name:</label>
-				<input type="text" class="form-control" id="name" name="name" placeholder="Your name here"/>
-			
-			</div>
-			<div class="form-group">
-				<label for="message">Message:</label>
-				<textarea class="form-control" name="message" id="message" placeholder="Your message here"></textarea>
-			</div>
-			<div class="form-group">
-				<input type="checkbox" name="promo" value="yes"/> Send me promotional content
-			</div>
-			<button type="submit" class="btn btn-default">Submit</button>
-		</form>
-	</div>
+ 
  
 	<!--<div><br /><a href = "mailto:email@gmail.com" class = "contactLink">myEmail@yahoo.com</a></div>-->
 
