--- a/Contact/index.html
+++ b/Contact/index.html
@@ -4,7 +4,6 @@
 <link rel = "icon" href = ../icon.png>
 
 <link type="text/css" rel="stylesheet" href="../Layout.css">
-<script type="text/javascript" src="https://form.jotform.us/jsform/72046392509155"></script>
 </head>
 <body text="#fff">
 
@@ -35,7 +34,8 @@
 	<div class = "card">	<p style = "text-align: center">If you would like to contact me, please fill out this
 			form. Thank you for visiting my website.</p>
 	</div>
- 
+	
+  <script src="https://form.jotform.us/static/feedback2.js" type="text/javascript"> var JFL_72046392509155 = new JotformFeedback({ formId: '72046392509155', base: 'https://form.jotform.us/', windowTitle: 'ContactMe', background: '#FFA500', fontColor: '#FFFFFF', type: 'false', height: 500, width: 700, openOnLoad: false }); </script> <a class="btn lightbox-72046392509155" style="margin-top: 16px"> ContactMe </a>
  
  
  
