--- a/About/index.html
+++ b/About/index.html
@@ -9,15 +9,16 @@
 <body text="#fff">
 
 	<div class="site-header">
-		<h1>Welcome To My Website</h1>
+		<h1>Victoria Thornton</h1>
 	</div>
 
-	<!--ABOUT-->
+	<!--ABOUT
+			<li><a href="../Games/index.html" target="">Games</a></li>
+		<li><a href="../Contact/index.html" target="">Contact</a></li>
+-->
 	<ul class="topnav" id="myTopnav">
 		<li><a href="../index.html" target="">Home</a></li>
 		<li><a href="index.html" target="">About</a></li>
-		<li><a href="../Games/index.html" target="">Games</a></li>
-		<li><a href="../Contact/index.html" target="">Contact</a></li>
 		<li><a href="../Portfolio/index.html" target="">Portfolio</a></li>
 		<li class="icon"><a href="javascript:void(0);"
 			onclick="myFunction()">&#9776;</a></li>
@@ -29,14 +30,9 @@
 
 	<div class="card">
 		<p>Hello. My name is Victoria Thornton, and
-			programming is one of my favorite activities. So far, I have written code in Java, C++, C#, and JavaScript. I have developed some 3D games using the Unity game engine, and I am
-			also learning webpage design both for my senior project and for fun. For my project, I have created this website, and 
-			a website for the GHSGCA.
-			(ghsgca.org)</p>
-	</div>
-
-	<div class="card">
-		<p>If you would like to contact me, please visit my <a href = "../Contact/index.html" style = "text-decoration: none; :hover{color: black}">contact page</a></p>
+			programming is one of my favorite activities. So far, I have written code in Java, C++, C#, Python, and JavaScript, I have developed some 3D games using the Unity game engine, and I am
+			also learning webpage design and 3D modelling for fun. </p>
+			<p>I am currently a Sophmore at WPI, and I am studying Computer Science and Robotics Engineering. Some of my ongoing and finished projects are on my <a href = "http://www.github.com/victoriathornton">Github</a> page or my <a href="../Portfolio/index.html" target="">Portfolio</a> page. </p>
 	</div>
 	
 	</body>
