--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -66,7 +66,7 @@
 	</div>
 
 	<div class="card">
-		<p>Welcome to my portfolio page. Here are a few projects that I have finished or are
+		<p>Welcome to my portfolio page. Here are a few projects that I have finished or am
 			currently working on. If you would like to see more of my projects,
 			please visit my github page using this link:
 			<a href="https://github.com/VictoriaThornton/" target="">My Code on
@@ -79,8 +79,10 @@
 <div class="panel">
  <p style = "color: black">In C-Term 2018, I took a course called AR205X or 3D Environmental Modelling. It was so much fun. Here, I'm going to display a few things that I did during my time in the class.</p>
 <p style = "color: black">Below is a video timelapse of me putting the final pieces together. At this point, we were nearing the end of the class, and I realized that I didn't have much video yet, so I started taking it, just so that I could document my progress and see what I'd done. At the beginning of the video, I'm putting together the library, creating a box, then adding the arch models, then adding the bookshelves, and at this time, I even decided to add in steps as well. After that, I began the UV mapping for everything, and I also made a UV map for the rug in the video as well. After I've UV mapped everything, I transferred the model to Ureal to see how it looked. After finding that some of the textures didn't transfer or look right in Unreal, I went back to Maya to edit them. I also redid the tower models for the outside of the castle, finding that the new one I'd made not only looked much better, but took me much less time to do. In the video, I also made a purple roof texture for the towers and library. I'm really proud of the texture, but I think it just didn't come out the way I envisioned it once I'd added it to the towers. I think it's because of the strange conical shape of the towers that made it come out this way. In the video, I worked for a while trying to make the texture look right. I think it looks great on the roof of the library though, since that surface if more of a flat plane. In the video, I also included myself creating a bridge for the front of the castle. I still remember the morning that I made that. After the bridge, I re-textured the books for the bookshelves because I created a paper texture for them. Even though you can only see it if you look up close, I'm still very proud of the paper texture for the books. I was so impressed with how great it came out. After that, I made two flat planes for the grass and water surrounding the castle, and I also added some simple tree models to the outside (Since we had to have foilage for this part of the assignment). I didn't like how that came out at all, but by the final project, the exterior was much improved. I wish I could have gotten video of that, but I couldn't because I did the final phase of the project (moving everything to Unreal) on one of the computers in the IMGD lab. I will put the Unreal screenshots below though. I had so much fun doing this project (although it was quite stressful sometimes, and I never really got the lighting the  way I wanted it in time), and when I presented my final project in class, I even got a complement from the professor (Roshanak Bigonah) on my models. I miss taking that class now, but I started on another project about a month or so ago. A smaller library. The progress pictures for that project are below. </p>
-<video width="30%; height: auto; float:right" controls muted><source src="../Images/artVideo.mp4" type="video/mp4">
-</video>
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/00_aK4BkN18?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<!--<video width="30%; height: auto; float:right" controls muted><source src="../Images/artVideo.mp4" type="video/mp4">
+</video>-->
 <br />
 <button class="accordion">AR 205X Class Progress</button>
     <div class="panel">
