--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -147,7 +147,8 @@
         <p style = "color: black">
 			Game made for the 2018 WPI Winter Hackathon
 		</p>
-		<p>	<video width="30%; height: auto; float:left" controls muted><source src="../Images/foodChain.mp4" type="video/mp4">
+		<p>
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/umlFs6GSqm0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</p><br />
 			<br />
 			<p style = "color: black">See it's page on <a href = "https://devpost.com/software/food-chain" style = "color: green">Devpost</a> </p>
@@ -158,8 +159,8 @@
     <div class="panel">
         <p>
 			<p style = "color: black">Game made for the APCSP (AP Computer Science Principles) final project</p>
-			<video width="30%; height: auto; float:left" controls muted><source src="../Images/gearGame.mp4" type="video/mp4">
-        </p> 
+			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/sHViBQGexSo?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</p> 
     </div>
 </div>
 
