Fixed an image link

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -97,7 +97,7 @@
                 <img src = "../Images/castle/ao4.jpeg" style = "width: 20%; height: 20%">
                 <img src = "../Images/castle/ao5.jpeg" style = "width: 20%; height: 20%">
                 <img src = "../Images/castle/10.jpeg" style = "width: 20%; height: 20%">
-                <img src = "Images/castle/render1 - Copy.jpeg" style = "width: 20%; height: 20%">
+                <img src = "../Images/castle/render1 - Copy.jpeg" style = "width: 20%; height: 20%">
                 <img src = "../Images/castle/render1.jpeg" style = "width: 20%; height: 20%">
                 <img src = "../Images/castle/render10.jpeg" style = "width: 20%; height: 20%">
                 <img src = "../Images/castle/render4 - Copy.jpeg" style = "width: 20%; height: 20%">
