--- a/About/index.html
+++ b/About/index.html
@@ -32,7 +32,7 @@
 		<p>Hello. My name is Victoria Thornton, and
 			programming is one of my favorite activities. So far, I have written code in Java, C++, C#, Python, and JavaScript, I have developed some 3D games using the Unity game engine, and I am
 			also learning webpage design and 3D modelling for fun. </p>
-			<p>I am currently a Sophmore at WPI, and I am studying Computer Science and Robotics Engineering. Some of my ongoing and finished projects are on my <a href = "http://www.github.com/victoriathornton">Github</a> page or my <a href="../Portfolio/index.html" target="">Portfolio</a> page. </p>
+			<p>I am currently a Junior at WPI, and I am studying Computer Science and Robotics Engineering. Some of my ongoing and finished projects are on my <a href = "http://www.github.com/victoriathornton">Github</a> page or my <a href="../Portfolio/index.html" target="">Portfolio</a> page. </p>
 	</div>
 	
 	</body>
