Edited card design

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
 
-            <div class = "card">
+            <div class = "card squareCard">
                 <div class = "row">
                     <div class = "column">
                         <p>Hello! Thanks for visiting my website. My name is Victoria Thornton and I am a recent Computer Science graduate from Worcester Polytechnic Institute (WPI). I am currently located in Phenix City, Alabama and looking to fill a Software Development/Engineering role. </p>
@@ -74,7 +74,7 @@
             </div>
         </div>
         
-        <div class = "card">
+        <div class = "card squareCard">
             Work Experience: Chemical Stockroom at Worcester Polytechnic Institute
             <span class="pln"><!-- Unordered list -->
             </span><ul><span class="pln">
@@ -83,7 +83,7 @@
             </span></ul><span class="pln">
         </div>
 
-        <div class = "card">
+        <div class = "card squareCard">
             Project: Autonomous String Tuning
             <span class="pln"><!-- Unordered list -->
             </span><ul><span class="pln">
@@ -93,7 +93,7 @@
         </div>
 
 
-        <div class = "card">
+        <div class = "card squareCard">
             Project: Robotics
             RBE 1001
             RBE 2001 
@@ -105,7 +105,7 @@
             </span></ul><span class="pln">
         </div>
 
-        <div class = "card">
+        <div class = "card squareCard">
             Project: Food Chain Hackathon 2018
             <span class="pln"><!-- Unordered list -->
             </span><ul><span class="pln">
@@ -114,11 +114,11 @@
             </span></ul><span class="pln">
         </div>
 
-        <div class = "card">
+        <div class = "card squareCard">
             Languages:
         </div>
 
-        <div class = "card">
+        <div class = "card squareCard">
             Press:
         </div>
     </body>
