Added and tested links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <link rel = "icon" href = "Images/icon.png">
 
@@ -36,7 +37,7 @@
         </div>
 
         <a href = "https://github.com/victoriathornton">
-            <img style = "float: right; height: 30%; width: auto; padding-top: 90px" src = "Images/GitHub-Mark-64px.png" alt = "Github Link"> </img>
+            <img style = "float: right; height: 30%; width: auto; padding-top: 90px" src = "Images/GitHub-Mark-64px.png" alt = "Github Link" class = "githublogo"> </img>
             </a>
     </div>
 
@@ -56,7 +57,7 @@
                     <div class = "column">
                         <p>Hello! Thanks for visiting my website. My name is Victoria Thornton and I am a recent Computer Science graduate from Worcester Polytechnic Institute (WPI). I am currently located in Phenix City, Alabama and looking to fill a Software Development/Engineering role. </p>
 
-                        <p>To <b style = "color:#733380" >contact</b> me please email at: <a href = "mailto:victoriajthornton@gmail.com">victoriajthornton@gmail.com</a>. My resume as well as a portfolio of projects and previous work I have done can be found below.</p>
+                        <p>To <b style = "color:#733380" >contact</b> me please email at: <a href = "mailto:victoriajthornton@gmail.com">victoriajthornton@gmail.com</a>. A portfolio of projects and previous work I have done can be found below.</p>
 
                     </div>
                 </div>
@@ -86,14 +87,15 @@
             <span class="pln"><!-- Unordered list -->
             </span><ul><span class="pln">
               </span><li><span class="pln">worked in a five member team to create an instrument that could perform and tune autonomously  </span></li><span class="pln">
-              </span><li><span class="pln">lead development of user interface for instrument pictured below</span></li><span class="pln">
+              </span><li><span class="pln">led development of user interface for instrument pictured below</span></li><span class="pln">
               </span><li><span class="pln">project developed over the course of 28 weeks</span></li><span class="pln">
               </span><li><span class="pln">(Tools used: Javascript, HTML, CSS, Node.js, Arduino, C/C++)</span></li><span class="pln">
             </span><li><span class="pln"><a href = "https://digital.wpi.edu/concern/student_works/3x816q49r"> link to project report </a></span></li><span class="pln">
+            </span><li><span class="pln"><a href = "https://github.com/VictoriaThornton/AutonomousStringTuning"> link to project Github page </a></span></li><span class="pln">
             </span></ul><span class="pln">
             <img src = "Images/MQP/userInterfaceCustomMode.png"></img>
             <img src = "Images/MQP/userInterfaceChordMode.png"></img>
-            <img src = "Images/MQP/full instrument.jpg" style = "width: 10.5%"></img>
+            <img src = "Images/MQP/full instrument.jpg" style = "width: 10.5%" class = "MQPInstrument"></img>
             
         </div>
 
@@ -105,10 +107,11 @@
             <span class="pln"><!-- Unordered list -->
             </span><ul><span class="pln">
               </span><li><span class="pln">In both courses, worked in a three member team to make a robot that could perform the course requirements</span></li><span class="pln">
-              </span><li><span class="pln">Lead programming on both teams</span></li><span class="pln">
+              </span><li><span class="pln">Led programming on both teams</span></li><span class="pln">
             </span><li><span class="pln">(Tools Used: Arduino, C/C++)</span></li><span class="pln">
-              </span><li><span class="pln">report for RBE 2001 (pictured left)</span></li><span class="pln">
-            </span><li><span class="pln">report for RBE 1001 (pictured right)</span></li><span class="pln">
+              </span><li><span class="pln"><a href = "https://drive.google.com/file/d/1mvoCBPDv0BNM25rjhm7kziV7QfnDTNUi/view?usp=share_link">report for RBE 2001 (pictured left)</a></span></li><span class="pln">
+            </span><li><span class="pln"><a href = "https://drive.google.com/file/d/1Te-Ncw3qVkRERIegW7GzcTxmcqi2Fif6/view"> report for RBE 1001 (pictured right)</a></span></li><span class="pln">
+            </span><li><span class="pln"><a href = "https://github.com/VictoriaThornton/LiftOff_2017"> link to project Github page </a></span></li><span class="pln">
             </span></ul><span class="pln">
                 <img src = "Images/robotics/2001_robot.PNG" style = "width: 30%"></img>
                 <img src = "Images/robotics/1001_robot.PNG" style = "width: 30.5%"></img>
@@ -120,7 +123,7 @@
             </span><ul><span class="pln">
               </span><li><span class="pln">created a game along with team member, Alejandra Garza, for the WPI 2018 Hackathon</span></li><span class="pln">
               </span><li><span class="pln">(Tools Used: Unity, C#)</span></li><span class="pln">
-            </span><li><span class="pln"><a href = "https://devpost.com/software/food-chain"> link to Devpost page </a></span></li><span class="pln">
+            </span><li><span class="pln"><a href = "https://devpost.com/software/food-chain"> link to project Devpost page </a></span></li><span class="pln">
             </span></ul><span class="pln">
                 <img src = "Images/foodChain.jpg"></img>
         </div>
@@ -129,12 +132,12 @@
             Languages: Java, C/C++, Javascript, HTML, CSS, C#, Python
         </div>
 
-        <div class = "card squareCard">
-            Press:  <a href = "https://www.ledger-enquirer.com/news/local/education/article146382719.html"> Ledger Enquirer: Columbus High Robotics Team First from Georgia to Reach World Finals </a>
-        <br><br />
-        <div>
-            <span style = "vertical-align: middle;">Hobbies: </span>    
-            <span style = "vertical-align: middle;"> 
+     <!-- <div class = "card squareCard"> -->
+            <!-- Press:  <a href = "https://www.ledger-enquirer.com/news/local/education/article146382719.html"> Ledger Enquirer: Columbus High Robotics Team First from Georgia to Reach World Finals </a> -->
+        <!-- <br><br />
+        <div> -->
+            <!-- <span style = "vertical-align: middle;">Hobbies: </span>     -->
+            <!-- <span style = "vertical-align: middle;"> 
                 <img src = "Images/icons/viola.png" style = "width: 3.5%"></img>
                 <img src = "Images/icons/crochet.png" style = "width: 3.5%"></img>
                 <img src = "Images/icons/console.png" style = "width: 3.5%"></img>
@@ -142,7 +145,7 @@
                 <img src = "Images/icons/coding.png" style = "width: 3.5%"></img>
                 </span>
         </div>
-        </div>
+        </div> -->
     </body>
 
     <footer style = "padding-top: 50px"></footer>
