--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class = "card squareCard">
                 <div class = "row">
                     <div class = "column">
-                        <p>Hello! Thanks for visiting my website. My name is Victoria Thornton and I am a recent Computer Science graduate from Worcester Polytechnic Institute (WPI). I am currently located in Phenix City, Alabama and looking to fill a Software Development/Engineering role. </p>
+                        <p>Hello! Thank you for visiting my website. My name is Victoria Thornton and I am a Computer Science graduate from Worcester Polytechnic Institute (WPI). I am currently located in Phenix City, Alabama and looking to fill a Software Development/Engineering role. </p>
 
                         <p>To <b style = "color:#733380" >contact</b> me please email at: <a href = "mailto:victoriajthornton@gmail.com">victoriajthornton@gmail.com</a>. A portfolio of projects and previous work I have done can be found below.</p>
 
@@ -129,7 +129,7 @@
         </div>
 
         <div class = "card squareCard">
-            Languages: Java, C/C++, Javascript, HTML, CSS, C#, Python
+            Languages: Java, C/C++, Javascript, HTML, CSS, C#, Python, SQL
         </div>
 
      <!-- <div class = "card squareCard"> -->
